<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>sh_find_server</name>
    <version>0.0.0</version>
    <description>The smart home's server for its framework for internal navigation and discovery (FIND).</description>
    <maintainer email="rnvandemark@gmail.com">R. Nick Vandemark</maintainer>
    <license>BSD</license>
    <author email="rnvandemark@gmail.com">R. Nick Vandemark</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <build_depend>rclcpp</build_depend>
    <build_depend>sh_find_common</build_depend>

    <exec_depend>rclcpp</exec_depend>
    <exec_depend>sh_find_common</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
